# json-formater

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-deb.yml
configuration/: cfg.json
src/: json-formater.cpp  json-formater.hpp  main.cpp
systemd/: json-formater.service
workflows/: build-deb.yml
